Fix date input alignment

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -13,6 +13,9 @@ label{
 
     &__group{
         padding: 1rem 0;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
 
         &:first-child{
             padding-top: 0;
@@ -65,7 +68,7 @@ label{
 
 input[type=date] {
     height: 35px;
-    margin: 0 auto;
+    margin: 0;
     width: 17rem;
     font-family: inherit;
     font-size: inherit;
